styles/main.scss
---
---
//main colors
$marsala: #955251;
$orchid: #B163A3;
$emerald: #009b77;
$cool-gray: #888b8d;

//black-white color scheme
$black: #000;
$white: #FFFFFF;
$silver: #ccc;
$concrete: #f3f3f3;
$main-shaft: #222222;
$darkgray: rgba($black, 0.1);

//color names from
// http://chir.ag/projects/name-that-color/
$mariner: #1e5dd3;
$denim: #195fc7;  //not used anymore
$madison: #092F5F;
$cyprus: #003141;

$shark: #1C1C1D;
$danube: #557FD0;

$tree-poppy: #f9921c;

//functional colors

$main-text-color: $cyprus;  //could be $main-shaft
$link-color: $emerald;
$link-visited-color: $orchid;
$link-color-visited: $emerald;
$hover-link-color: $orchid;
$main-border: $danube;


$nav-link-color: $shark;  //#202129 is very close to $shark!

$border-color: $main-text-color;
$section-border-color: $cool-gray;

@import "html5boilerplate";
@import "navigation";
@import "participants";
@import "schedule";
@import "bootstrap-sass/assets/stylesheets/bootstrap";


/* =============================================================================
   Primary styles
section { position: relative; clear: both; }
aside { font-size: 0.75em; }
   ========================================================================== */
body 
{
    width: 100%;
    background: rgba($shark, 0.1);
	
    font-family: 'Source Sans Pro', sans-serif;
    color: $main-text-color;
    padding: 0;
    margin: 0;
}


h2,h3,h4 {
	
	a 
	{
		color: $emerald;

		&.visited {
			color: $emerald;			
		}
	}
}


main.site-main {
//    width: 960px;
    margin: 0 auto;
    overflow: hidden;	
}

*, *:before, *:after 
{
    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
}

/* Clearfix */
.cf {
    *zoom: 1;
}
.cf:before, .cf:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.cf:after {
    clear: both;
}


a
{
    cursor: pointer;
    text-decoration: none;
    
    &:hover
    {
        text-decoration: underline;
    }
}

p
{
    a
    {
        color: $link-color;
    }
}

.left
{
    float: left;
}

.right
{
    float: right;
}

.vertical-center
{
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}


.full-width
{
    width: 100%;
    float: left;
    margin-bottom: 20px;
}

.main-content
{
    padding: 2em;
    background: rgba($white,0.7);
    margin-bottom: 20px;
    border-top: 5px solid $section-border-color;
    width: 100%;
    float: left;
    

	hgroup {
		h2 {
			font-size: 2.25em;
			font-weight: bold;
		  	line-height: 0.7;
		  	margin-top: 0;
			
			span {
				font-size: 0.666em;
				font-weight: normal;
				
				.count {
					font-size: 2em;
					float: left;
					margin-right: 15px;
					line-height: 0.73;
					font-weight: bold;
				}
			}
	  	}
	}

    h2
    {
        font-weight: 600;
        font-size: 3em;
        margin-top: 0;
    }
    
    .tile
    {
        
    }

    ul
    {
      list-style: none;  
    }
	
	.volunteers-list
	{
	    list-style: none;
	    margin: 0;
	    padding: 0;
    
	    li
	    {
	        display: block;
	        float: left;
	        text-align: center;
	        margin: 0 15px 15px 0;
        
	        img
	        {
	            max-width: 200px;
	            height: 200px;
	            border-radius: 30px;
	            display: block;
	        }
        
	        .name
	        {
	            display: block;
	            font-size: 18px;
	            font-weight: 600;
	            margin: 5px 0 0 0;
	        }
        
	        a
	        {
	            color: $link-color;
	        }
	    }
	}
	
	.volunteer
	{
	    img
	    {
	        max-width: 200px;
	        border-radius: 30px;
	        display: block;
	    }
	}
}

.tile
{
    float: left;
    height: 230px;
    text-align: center;
    position: relative;
    
    &.tile-2{

		@media all and (min-width: 768px) and (max-width: 991px)
	    {
	        float: right;
	    }
    	
    }
    
    h3
    {
        font-weight: 600;
        font-size: 30px;
    }
    
    p
    {
        font-size: 17px;
    }
    
    &.text-tile
    {
        background-color: rgba( $section-border-color, 0.4 );
        color: $main-text-color;
        padding: 20px;
		
		h3{
	        color: $emerald;
		}
    }
    
    &.image-tile
    {
        &.photo-1
        {
            background: url(../images/photo-1.jpg);
            background-size: cover;
        }
        
        &.photo-2
        {
            background: url(../images/photo-2.jpg);
            background-size: cover;
        }
                
        a
        {
            position: absolute;
            bottom: 0px;
            left: 0px;
            width: 100%;
            display: block;
            background: rgba($black,0.3);
            color: $white;
            text-align: center;
            text-decoration: none;
            font-size: 13px;
            padding: 3px 0;
        }
    }
}

hr 
{
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid $silver;
    margin: 1em 0;
    padding: 0;
}

p
{
    &.large
    {
        font-size: 1.4em;
        line-height: 1.5;
    }
}

.text-center
{
    text-align: center;
}

.text-line-through
{
    text-decoration: line-through;
}


.hero-unit
{
	//with this, it's easy to have a background imeage for the site - like in #codefreeze.
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    
    &.frontpage
    {
        height: 1000px;
//		background: rgba($white,0.9);  //This would make the background transparent via white
//        background-image: url(../images/revontulet.jpg);
        background-size: cover;
        z-index: -1;
    }
    
    
}

.column {
  float: left;
  border-right: 20px solid transparent;
  -webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.half {
  width: 50%;
}

.third {
  width: 33%;
}
.two-thirds {
  width: 67%;
}
.one-eight {
	width: 12%;
}

.half + .half,
.third + .two-thirds,
.third + .third + .third {
  border-right: 0;
}



.push-left
{
  float: left;
}


/* =============================================================================
   Non-semantic helper classes
   Please define your styles before this section.
   ========================================================================== */
.ir { display: block; text-indent: -999em; overflow: hidden; background-repeat: no-repeat; text-align: left; direction: ltr; }
.ir br { display: none; }
.hidden { display: none; visibility: hidden; }
.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
.invisible { visibility: hidden; }
.clearfix:before, .clearfix:after { content: ""; display: table; }
.clearfix:after { clear: both; }
.clearfix { zoom: 1; }



/* =============================================================================
   Media Queries
   ========================================================================== */

@media only screen and (max-width: 480px) {
  /* mobile layout */
  .inner { width: 100%; }
  .column {
    float: none;
    width: 100% !important;
    border-right: 0 !important;
  }
  
  
  #branding {
    height: auto;
    text-align: center;
  }
  
  #branding #logo {
    margin: 30px 0 10px;
  }
  
  #navigation,
  #navigation.fixed {
    position: relative;
    border-width: 0;
  }
  
  #navigation #logo-mini {
    display: none;
  }
  
  #navigation.fixed ul {
    width: 100%;
  }
  
  #navigation li, #navigation.fixed li,
  #navigation li a, #navigation.fixed li a {
    display: block;
    width: 100%;
    text-align: center;
    padding: 0;
  }
  
  #navigation a {
    border-bottom: 1px solid $section-border-color;
  }
  
  #cites {
    display: none;
  }
  
  #main {
    -webkit-box-sizing: border-box;
	  -moz-box-sizing: border-box;
  	box-sizing: border-box;
    width: 100%;
    padding: 0 15px;
  }
  
  figure.speaker {
    width: 16.6%;
  }
  
  figure.speaker img {
    width: 100%;
  }
  #speakers figure.first {
    margin-left: 0;
  }
  
  #speakers .call-to-action {
    position: relative;
    bottom: 0;
    clear: both;
  }
  
  #coffee img {
    width: 100%;
  }
  
  #colophon {
    padding: 2em 15px;
    text-align: center;
  }
  
  #sponsor-groups,
  #sponsor-groups li {
    height: 330px;
  }
  
  #sponsor-groups li {
    top: -330px;
  }
    #sponsor-groups li.active { top: 0; }
    #sponsor-groups li.next { top: 330px; }
  
  #sponsor-groups li .sponsor {
    width: 42%;
    margin: 0 3%;
  }
  
  #sponsors .sponsor img {
    width: 100%;
  }
  
  .schedule .topic {
    font-size: 0.6em;
  }
}

@media only screen and (min-width: 768px) {
  /* Style adjustments for viewports 768px and over go here */

}


/* =============================================================================
   Print styles.
   Inlined to avoid required HTTP connection: www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */
 
@media print {
  * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; -webkit-text-stroke: 0 !important; } /* Black prints faster: sanbeiji.com/archives/953 */
  body { opacity: 1 !important; }
  a, a:visited { color: #444 !important; text-decoration: underline; }
  abbr[title]:after { content: " (" attr(title) ")"; }
  .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; }  /* Don't show links for images, or javascript/internal links */
  pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
  thead { display: table-header-group; } /* css-discuss.incutio.com/wiki/Printing_Tables */
  tr, img { page-break-inside: avoid; }
  img { max-width: 100% !important; }
  @page { margin: 0.5cm; }
  p, h2, h3 { orphans: 3; widows: 3; }
  h2, h3{ page-break-after: avoid; }
  #colophon, #navigation, #cites { display: none; }
}

